--- a/404.html
+++ b/404.html
@@ -35,20 +35,7 @@
             margin-bottom: 1px;
         }
         .inner a {
-            color: blue;
             text-decoration: none;
-        }
-        .inner a:hover {
-            text-decoration: underline !important;
-        }
-        .inner a:hover {
-            color: mediumblue;
-        }
-        .inner a:visited {
-            color: darkblue;
-        }
-        .inner a:active {
-            color: darkblue;
         }
     </style>
 </head>
@@ -100,25 +87,27 @@
                 <div class="middle">
                     <div class="inner">
                         <h3>Страница не найдена</h3>
-                        <h5><a href="/index.html">На главную</a></h5>
+                        <h5><a href="/index.html"><i class="material-icons">home</i>На главную</a></h5>
                         <br>
-                        <a href="/centuries/xiii.html"><i class="material-icons">history</i>XIII век</a>
-                        <a href="/centuries/xiv.html"><i class="material-icons">history</i>XIV век</a>
-                        <a href="/centuries/xv.html"><i class="material-icons">history</i>XV век</a>
-                        <a href="/centuries/xvi.html"><i class="material-icons">history</i>XVI век</a>
-                        <a href="/centuries/xvii.html"><i class="material-icons">history</i>XVII век</a>
-                        <a href="/centuries/xviii.html"><i class="material-icons">history</i>XVIII век</a>
-                        <a href="/centuries/xix.html"><i class="material-icons">history</i>XIX век</a>
-                        <a href="/centuries/xx.html"><i class="material-icons">history</i>XX век</a>
+                        <b>Столетия:</b>
+                        <a href="/centuries/xiii.html"><i class="material-icons">history</i>XIII век</a><br>
+                        <a href="/centuries/xiv.html"><i class="material-icons">history</i>XIV век</a><br>
+                        <a href="/centuries/xv.html"><i class="material-icons">history</i>XV век</a><br>
+                        <a href="/centuries/xvi.html"><i class="material-icons">history</i>XVI век</a><br>
+                        <a href="/centuries/xvii.html"><i class="material-icons">history</i>XVII век</a><br>
+                        <a href="/centuries/xviii.html"><i class="material-icons">history</i>XVIII век</a><br>
+                        <a href="/centuries/xix.html"><i class="material-icons">history</i>XIX век</a><br>
+                        <a href="/centuries/xx.html"><i class="material-icons">history</i>XX век</a><br>
                         <br>
-                        <a href="/stands/architectural.html">Архитектурный Нижний<i class="material-icons">apartment</i></a>
-                        <a href="/stands/literary.html">Литературный Нижний<i class="material-icons">book</i></a>
-                        <a href="/stands/theatrical.html">Театральный Нижний<i class="material-icons">theaters</i></a>
-                        <a href="/stands/industrial.html">Промышленный Нижний<i class="material-icons">emoji_transportation</i></a>
-                        <a href="/stands/victorious.html">Победный Нижний<i class="material-icons">flag</i></a>
-                        <a href="/stands/musical.html">Музыкальный Нижний<i class="material-icons">music_note</i></a>
-                        <a href="/stands/orthodoxic.html">Православный Нижний<i class="material-icons">meeting_room</i></a>
-                        <a href="/stands/honorary_citizens.html">Почетные граждане<i class="material-icons">person_outline</i></a>
+                        <b>Стенды:</b>
+                        <a href="/stands/architectural.html">Архитектурный Нижний<i class="material-icons">apartment</i></a><br>
+                        <a href="/stands/literary.html">Литературный Нижний<i class="material-icons">book</i></a><br>
+                        <a href="/stands/theatrical.html">Театральный Нижний<i class="material-icons">theaters</i></a><br>
+                        <a href="/stands/industrial.html">Промышленный Нижний<i class="material-icons">emoji_transportation</i></a><br>
+                        <a href="/stands/victorious.html">Победный Нижний<i class="material-icons">flag</i></a><br>
+                        <a href="/stands/musical.html">Музыкальный Нижний<i class="material-icons">music_note</i></a><br>
+                        <a href="/stands/orthodoxic.html">Православный Нижний<i class="material-icons">meeting_room</i></a><br>
+                        <a href="/stands/honorary_citizens.html">Почетные граждане<i class="material-icons">person_outline</i></a><br>
                     </div>
                 </div>
             </div>
