Не там сдвинутые иконки

--- a/404.html
+++ b/404.html
@@ -103,14 +103,14 @@
                         <br>
                         <b>Стенды:</b>
                         <br>
-                        <a href="/stands/architectural.html">Архитектурный Нижний<i class="material-icons">apartment</i></a><br>
-                        <a href="/stands/literary.html">Литературный Нижний<i class="material-icons">book</i></a><br>
-                        <a href="/stands/theatrical.html">Театральный Нижний<i class="material-icons">theaters</i></a><br>
-                        <a href="/stands/industrial.html">Промышленный Нижний<i class="material-icons">emoji_transportation</i></a><br>
-                        <a href="/stands/victorious.html">Победный Нижний<i class="material-icons">flag</i></a><br>
-                        <a href="/stands/musical.html">Музыкальный Нижний<i class="material-icons">music_note</i></a><br>
-                        <a href="/stands/orthodoxic.html">Православный Нижний<i class="material-icons">meeting_room</i></a><br>
-                        <a href="/stands/honorary_citizens.html">Почетные граждане<i class="material-icons">person_outline</i></a><br>
+                        <a href="/stands/architectural.html"><i class="material-icons">apartment</i>Архитектурный Нижний</a><br>
+                        <a href="/stands/literary.html"><i class="material-icons">book</i>Литературный Нижний</a><br>
+                        <a href="/stands/theatrical.html"><i class="material-icons">theaters</i>Театральный Нижний</a><br>
+                        <a href="/stands/industrial.html"><i class="material-icons">emoji_transportation</i>Промышленный Нижний</a><br>
+                        <a href="/stands/victorious.html"><i class="material-icons">flag</i>Победный Нижний</a><br>
+                        <a href="/stands/musical.html"><i class="material-icons">music_note</i>Музыкальный Нижний</a><br>
+                        <a href="/stands/orthodoxic.html"><i class="material-icons">meeting_room</i>Православный Нижний</a><br>
+                        <a href="/stands/honorary_citizens.html"><i class="material-icons">person_outline</i>Почетные граждане</a><br>
                     </div>
                 </div>
             </div>
