Футер под хидер

--- a/404.html
+++ b/404.html
@@ -71,14 +71,14 @@
             <a class="mdl-navigation__link" href="/centuries/xx.html"><i class="material-icons">history</i>XX век</a>
 
             <a class="mdl-navigation__link mdl-layout__drawer-navigation-subcategory">Стенды:</a>
-            <a class="mdl-navigation__link" href="/stands/architectural.html">Архитектурный Нижний<i class="material-icons">apartment</i></a>
-            <a class="mdl-navigation__link" href="/stands/literary.html">Литературный Нижний<i class="material-icons">book</i></a>
-            <a class="mdl-navigation__link" href="/stands/theatrical.html">Театральный Нижний<i class="material-icons">theaters</i></a>
-            <a class="mdl-navigation__link" href="/stands/industrial.html">Промышленный Нижний<i class="material-icons">emoji_transportation</i></a>
-            <a class="mdl-navigation__link" href="/stands/victorious.html">Победный Нижний<i class="material-icons">flag</i></a>
-            <a class="mdl-navigation__link" href="/stands/musical.html">Музыкальный Нижний<i class="material-icons">music_note</i></a>
-            <a class="mdl-navigation__link" href="/stands/orthodoxic.html">Православный Нижний<i class="material-icons">meeting_room</i></a>
-            <a class="mdl-navigation__link" href="/stands/honorary_citizens.html">Почетные граждане<i class="material-icons">person_outline</i></a>
+            <a class="mdl-navigation__link" href="/stands/architectural.html"><i class="material-icons">apartment</i>Архитектурный Нижний</a><br>
+            <a class="mdl-navigation__link" href="/stands/literary.html"><i class="material-icons">book</i>Литературный Нижний</a><br>
+            <a class="mdl-navigation__link" href="/stands/theatrical.html"><i class="material-icons">theaters</i>Театральный Нижний</a><br>
+            <a class="mdl-navigation__link" href="/stands/industrial.html"><i class="material-icons">emoji_transportation</i>Промышленный Нижний</a><br>
+            <a class="mdl-navigation__link" href="/stands/victorious.html"><i class="material-icons">flag</i>Победный Нижний</a><br>
+            <a class="mdl-navigation__link" href="/stands/musical.html"><i class="material-icons">music_note</i>Музыкальный Нижний</a><br>
+            <a class="mdl-navigation__link" href="/stands/orthodoxic.html"><i class="material-icons">meeting_room</i>Православный Нижний</a><br>
+            <a class="mdl-navigation__link" href="/stands/honorary_citizens.html"><i class="material-icons">person_outline</i>Почетные граждане</a><br>
         </nav>
     </div>
     <main class="mdl-layout__content">
@@ -115,18 +115,18 @@
                 </div>
             </div>
         </div>
+        <br>
+        <footer class="mdl-mini-footer">
+            <div class="mdl-mini-footer__left-section">
+                <img class="mdl-logo mini-logo" src="/img/coat_of_arms.png" alt="Герб Нижегородской области">
+                <div class="mdl-logo about">Исторический зал<br>"Восемь столетий Нижнего Новгорода"</div>
+            </div>
+            <div class="mdl-mini-footer__right-section">
+                <div class="mdl-logo about gymnasium">МАОУ<br>"Гимназия №2"</div>
+                <img class="mdl-logo mini-logo" src="/img/gymnasium_logo.png" alt="Эмблема Гимназии №2">
+            </div>
+        </footer>
     </main>
-    <br>
-    <footer class="mdl-mini-footer">
-        <div class="mdl-mini-footer__left-section">
-            <img class="mdl-logo mini-logo" src="/img/coat_of_arms.png" alt="Герб Нижегородской области">
-            <div class="mdl-logo about">Исторический зал<br>"Восемь столетий Нижнего Новгорода"</div>
-        </div>
-        <div class="mdl-mini-footer__right-section">
-            <div class="mdl-logo about gymnasium">МАОУ<br>"Гимназия №2"</div>
-            <img class="mdl-logo mini-logo" src="/img/gymnasium_logo.png" alt="Эмблема Гимназии №2">
-        </div>
-    </footer>
 </div>
 
 </body>
