--- a/404.html
+++ b/404.html
@@ -86,7 +86,7 @@
             <div class="outer">
                 <div class="middle">
                     <div class="inner">
-                        <br>
+                        <br><br>
                         <h3>Страница не найдена</h3>
                         <h5><a href="/index.html"><i class="material-icons">home</i>На главную</a></h5>
                         <br>
@@ -115,18 +115,18 @@
                 </div>
             </div>
         </div>
-        <br>
-        <footer class="mdl-mini-footer">
-            <div class="mdl-mini-footer__left-section">
-                <img class="mdl-logo mini-logo" src="/img/coat_of_arms.png" alt="Герб Нижегородской области">
-                <div class="mdl-logo about">Исторический зал<br>"Восемь столетий Нижнего Новгорода"</div>
-            </div>
-            <div class="mdl-mini-footer__right-section">
-                <div class="mdl-logo about gymnasium">МАОУ<br>"Гимназия №2"</div>
-                <img class="mdl-logo mini-logo" src="/img/gymnasium_logo.png" alt="Эмблема Гимназии №2">
-            </div>
-        </footer>
     </main>
+    <br>
+    <footer class="mdl-mini-footer">
+        <div class="mdl-mini-footer__left-section">
+            <img class="mdl-logo mini-logo" src="img/coat_of_arms.png" alt="Герб Нижегородской области">
+            <div class="mdl-logo about">Исторический зал<br>"Восемь столетий Нижнего Новгорода"</div>
+        </div>
+        <div class="mdl-mini-footer__right-section">
+            <div class="mdl-logo about gymnasium">МАОУ<br>"Гимназия №2"</div>
+            <img class="mdl-logo mini-logo" src="img/gymnasium_logo.png" alt="Эмблема Гимназии №2">
+        </div>
+    </footer>
 </div>
 
 </body>
