--- a/404.html
+++ b/404.html
@@ -71,14 +71,14 @@
             <a class="mdl-navigation__link" href="/centuries/xx.html"><i class="material-icons">history</i>XX век</a>
 
             <a class="mdl-navigation__link mdl-layout__drawer-navigation-subcategory">Стенды:</a>
-            <a class="mdl-navigation__link" href="/stands/architectural.html"><i class="material-icons">apartment</i>Архитектурный Нижний</a><br>
+            <a class="mdl-navigation__link" href="/stands/architectural.html"><i class="material-icons">apartment</i>Архитектурный Нижний</a>
             <a class="mdl-navigation__link" href="/stands/literary.html"><i class="material-icons">book</i>Литературный Нижний</a><br>
-            <a class="mdl-navigation__link" href="/stands/theatrical.html"><i class="material-icons">theaters</i>Театральный Нижний</a><br>
-            <a class="mdl-navigation__link" href="/stands/industrial.html"><i class="material-icons">emoji_transportation</i>Промышленный Нижний</a><br>
-            <a class="mdl-navigation__link" href="/stands/victorious.html"><i class="material-icons">flag</i>Победный Нижний</a><br>
-            <a class="mdl-navigation__link" href="/stands/musical.html"><i class="material-icons">music_note</i>Музыкальный Нижний</a><br>
-            <a class="mdl-navigation__link" href="/stands/orthodoxic.html"><i class="material-icons">meeting_room</i>Православный Нижний</a><br>
-            <a class="mdl-navigation__link" href="/stands/honorary_citizens.html"><i class="material-icons">person_outline</i>Почетные граждане</a><br>
+            <a class="mdl-navigation__link" href="/stands/theatrical.html"><i class="material-icons">theaters</i>Театральный Нижний</a>
+            <a class="mdl-navigation__link" href="/stands/industrial.html"><i class="material-icons">emoji_transportation</i>Промышленный Нижний</a>
+            <a class="mdl-navigation__link" href="/stands/victorious.html"><i class="material-icons">flag</i>Победный Нижний</a>
+            <a class="mdl-navigation__link" href="/stands/musical.html"><i class="material-icons">music_note</i>Музыкальный Нижний</a>
+            <a class="mdl-navigation__link" href="/stands/orthodoxic.html"><i class="material-icons">meeting_room</i>Православный Нижний</a>
+            <a class="mdl-navigation__link" href="/stands/honorary_citizens.html"><i class="material-icons">person_outline</i>Почетные граждане</a>
         </nav>
     </div>
     <main class="mdl-layout__content">
@@ -86,7 +86,7 @@
             <div class="outer">
                 <div class="middle">
                     <div class="inner">
-                        <br><br>
+                        <br><br><br>
                         <h3>Страница не найдена</h3>
                         <h5><a href="/index.html"><i class="material-icons">home</i>На главную</a></h5>
                         <br>
