Страница 404 приведена в соответствие с главной

--- a/404.html
+++ b/404.html
@@ -10,34 +10,6 @@
     <link rel="stylesheet" href="/css/common.min.css">
     <link rel="stylesheet" href="/css/index.min.css">
     <title>Страница не найдена - Исторический зал</title>
-    <style>
-        .outer {
-            display: table;
-            position: absolute;
-            top: 0;
-            left: 0;
-            height: 100%;
-            width: 100%;
-        }
-        .middle {
-            display: table-cell;
-            vertical-align: middle;
-        }
-        .inner {
-            margin-left: auto;
-            margin-right: auto;
-            width: 100%;
-        }
-        .inner .material-icons {
-            vertical-align: bottom;
-            margin-right: 5px;
-            margin-top: 4px;
-            margin-bottom: 1px;
-        }
-        .inner a {
-            text-decoration: none;
-        }
-    </style>
 </head>
 <body>
 
@@ -83,50 +55,159 @@
     </div>
     <main class="mdl-layout__content">
         <div class="page-content">
-            <div class="outer">
-                <div class="middle">
-                    <div class="inner">
-                        <br><br><br>
-                        <h3>Страница не найдена</h3>
-                        <h5><a href="/index.html"><i class="material-icons">home</i>На главную</a></h5>
-                        <br>
-                        <b>Столетия:</b>
-                        <br>
-                        <a href="/centuries/xiii.html"><i class="material-icons">history</i>XIII век</a><br>
-                        <a href="/centuries/xiv.html"><i class="material-icons">history</i>XIV век</a><br>
-                        <a href="/centuries/xv.html"><i class="material-icons">history</i>XV век</a><br>
-                        <a href="/centuries/xvi.html"><i class="material-icons">history</i>XVI век</a><br>
-                        <a href="/centuries/xvii.html"><i class="material-icons">history</i>XVII век</a><br>
-                        <a href="/centuries/xviii.html"><i class="material-icons">history</i>XVIII век</a><br>
-                        <a href="/centuries/xix.html"><i class="material-icons">history</i>XIX век</a><br>
-                        <a href="/centuries/xx.html"><i class="material-icons">history</i>XX век</a><br>
-                        <br>
-                        <b>Стенды:</b>
-                        <br>
-                        <a href="/stands/architectural.html"><i class="material-icons">apartment</i>Архитектурный Нижний</a><br>
-                        <a href="/stands/literary.html"><i class="material-icons">book</i>Литературный Нижний</a><br>
-                        <a href="/stands/theatrical.html"><i class="material-icons">theaters</i>Театральный Нижний</a><br>
-                        <a href="/stands/industrial.html"><i class="material-icons">emoji_transportation</i>Промышленный Нижний</a><br>
-                        <a href="/stands/victorious.html"><i class="material-icons">flag</i>Победный Нижний</a><br>
-                        <a href="/stands/musical.html"><i class="material-icons">music_note</i>Музыкальный Нижний</a><br>
-                        <a href="/stands/orthodoxic.html"><i class="material-icons">meeting_room</i>Православный Нижний</a><br>
-                        <a href="/stands/honorary_citizens.html"><i class="material-icons">person_outline</i>Почетные граждане</a><br>
+            <br><br><br>
+            <h3>Страница не найдена</h3>
+
+            <h4>Столетия Нижнего Новгорода:</h4>
+            <div class="view_container">
+                <div class="view">
+                    <img alt="XIII век" src="/img/cards/centuries/xiii.jpg" />
+                    <div class="mask" style="background-color: rgba(229, 177, 81, 0.75)">
+                        <h2 style="color: #ff5700">XIII век</h2>
+                        <p>Основание города и монгольское нашествие на Русь</p>
+                        <a href="/centuries/xiii.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: #ff6900; color: white">Перейти</a>
+                    </div>
+                </div>
+                <div class="view">
+                    <img alt="XIV век" src="/img/cards/centuries/xiv.jpg" />
+                    <div class="mask" style="background-color: rgba(93, 132, 63, 0.78)">
+                        <h2 style="color: #a8db9f">XIV век</h2>
+                        <p>Борьба с Ордой и Нижегородско-Суздальское Великое княжество</p>
+                        <a href="/centuries/xiv.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: #5cbd5c; color: white">Перейти</a>
+                    </div>
+                </div>
+                <div class="view">
+                    <img alt="XV век" src="/img/cards/centuries/xv.jpg" />
+                    <div class="mask" style="background-color: rgba(148, 148, 164, 0.86)">
+                        <h2 style="color: black">XV век</h2>
+                        <p>Пограничный мост Московского государства</p>
+                        <a href="/centuries/xv.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: #51504fd9; color: white">Перейти</a>
+                    </div>
+                </div>
+                <div class="view">
+                    <img alt="XVI век" src="/img/cards/centuries/xvi.jpg" />
+                    <div class="mask" style="background-color: rgba(78, 155, 113, 0.69)">
+                        <h2 style="color: #7aee90">XVI век</h2>
+                        <p>Нижний Новгород во время правления Ивана Грозного и опричнины</p>
+                        <a href="/centuries/xvi.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: lightgreen; color: black">Перейти</a>
+                    </div>
+                </div>
+                <div class="view">
+                    <img alt="XVII век" src="/img/cards/centuries/xvii.jpg" />
+                    <div class="mask" style="background-color: rgba(100, 76, 37, 0.73)">
+                        <h2 style="color: orange">XVII век</h2>
+                        <p>Смутное время, церковный раскол и восстание Степана Разина</p>
+                        <a href="/centuries/xvii.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: orange; color: black">Перейти</a>
+                    </div>
+                </div>
+                <div class="view">
+                    <img alt="XVIII век" src="/img/cards/centuries/xviii.jpg" />
+                    <div class="mask" style="background-color: rgba(11, 180, 78, 0.77)">
+                        <h2 style="color: lightgreen">XVIII век</h2>
+                        <p>Нижний Новгород в эпоху петровских реформ и дворцовых переворотов</p>
+                        <a href="/centuries/xviii.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: lightgreen; color: black">Перейти</a>
+                    </div>
+                </div>
+                <div class="view">
+                    <img alt="XIX век" src="/img/cards/centuries/xix.jpg" />
+                    <div class="mask" style="background-color: rgba(35, 174, 167, 0.75)">
+                        <h2 style="color: #d5feff">XIX век</h2>
+                        <p>Отечественная война, развитие и Всероссийская выставка</p>
+                        <a href="/centuries/xix.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: #3be0e6; color: white">Перейти</a>
+                    </div>
+                </div>
+                <div class="view">
+                    <img alt="XX век" src="/img/cards/centuries/xx.jpg" />
+                    <div class="mask" style="background-color: rgba(123, 152, 211, 0.73)">
+                        <h2 style="color: #5357e2">XX век</h2>
+                        <p>Революция, переименование, война и возвращение исторического названия</p>
+                        <a href="/centuries/xx.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: #8f92f2; color: white">Перейти</a>
                     </div>
                 </div>
             </div>
+
+            <h4>Стенды:</h4>
+            <div class="view_container">
+                <div class="view">
+                    <img alt="Архитектурный Нижний" src="img/cards/stands/architecture.jpg" />
+                    <div class="mask" style="background-color: rgba(132,7,0,0.6)">
+                        <h2 style="color: #eac4c4">Архитектурный Нижний</h2>
+                        <p>Достопримечательности и история архитектуры Нижнего Новгорода</p>
+                        <a href="stands/architectural.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: indianred; color: white">Перейти</a>
+                    </div>
+                </div>
+                <div class="view">
+                    <img alt="Литературный Нижний" src="img/cards/stands/literature.jpg" />
+                    <div class="mask" style="background-color: rgba(129,132,63,0.78)">
+                        <h2 style="color: #a8db9f">Литературный Нижний</h2>
+                        <p>Интересная информация о нижегородской литературе</p>
+                        <a href="stands/literary.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: #5cbd5c; color: white">Перейти</a>
+                    </div>
+                </div>
+                <div class="view">
+                    <img alt="Театральный Нижний" src="img/cards/stands/theatre.jpg" />
+                    <div class="mask" style="background-color: rgba(142,188,209,0.78)">
+                        <h2 style="color: #004889d6">Театральный Нижний</h2>
+                        <p>История появления и развития театров в Нижнем Новгороде</p>
+                        <a href="stands/theatrical.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: skyblue; color: black">Перейти</a>
+                    </div>
+                </div>
+                <div class="view">
+                    <img alt="Промышленный Нижний" src="img/cards/stands/industry.jpg" />
+                    <div class="mask" style="background-color: rgba(132,69,22,0.73)">
+                        <h2 style="color: #ffe400d6">Промышленный Нижний</h2>
+                        <p>Интересная информация о нижегородской промышленности</p>
+                        <a href="stands/industrial.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: darkorange; color: white">Перейти</a>
+                    </div>
+                </div>
+                <div class="view">
+                    <img alt="Победный Нижний" src="img/cards/stands/victory.jpg" />
+                    <div class="mask" style="background-color: rgba(25,132,74,0.73)">
+                        <h2 style="color: #7aee90">Победный Нижний</h2>
+                        <p>Вклад нижегородцев в победу в Великой Отечественной войне</p>
+                        <a href="stands/victorious.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: forestgreen; color: white">Перейти</a>
+                    </div>
+                </div>
+                <div class="view">
+                    <img alt="Музыкальный Нижний" src="img/cards/stands/music.jpg" />
+                    <div class="mask" style="background-color: rgba(111,115,132,0.73)">
+                        <h2>Музыкальный Нижний</h2>
+                        <p>Интересная информация о академиях и консерваториях Нижнего Новгорода</p>
+                        <a href="stands/musical.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info">Перейти</a>
+                    </div>
+                </div>
+                <div class="view">
+                    <img alt="Православный Нижний" src="img/cards/stands/orthodoxy.jpg" />
+                    <div class="mask" style="background-color: rgba(132,115,46,0.73)">
+                        <h2 style="color: orange">Православный Нижний</h2>
+                        <p>История православия и храмов в Нижнем Новгороде</p>
+                        <a href="stands/orthodoxic.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: #e2a91f; color: black">Перейти</a>
+                    </div>
+                </div>
+                <div class="view">
+                    <img alt="Почетные граждане" src="img/cards/stands/honorary_citizens.jpg" />
+                    <div class="mask" style="background-color: rgba(132,5,61,0.73)">
+                        <h2 style="color: orangered">Почетные граждане</h2>
+                        <p>Информация о почетных гражданах Нижнего Новгорода</p>
+                        <a href="stands/honorary_citizens.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info" style="background-color: #f45656; color: black">Перейти</a>
+                    </div>
+                </div>
+                <br><br>
+                <br>
+            </div>
         </div>
+        <br>
+        <footer class="mdl-mini-footer">
+            <div class="mdl-mini-footer__left-section">
+                <img class="mdl-logo mini-logo" src="img/coat_of_arms.png" alt="Герб Нижегородской области">
+                <div class="mdl-logo about">Исторический зал<br>"Восемь столетий Нижнего Новгорода"</div>
+            </div>
+            <div class="mdl-mini-footer__right-section">
+                <div class="mdl-logo about gymnasium">МАОУ<br>"Гимназия №2"</div>
+                <img class="mdl-logo mini-logo" src="img/gymnasium_logo.png" alt="Эмблема Гимназии №2">
+            </div>
+        </footer>
     </main>
-    <br>
-    <footer class="mdl-mini-footer">
-        <div class="mdl-mini-footer__left-section">
-            <img class="mdl-logo mini-logo" src="img/coat_of_arms.png" alt="Герб Нижегородской области">
-            <div class="mdl-logo about">Исторический зал<br>"Восемь столетий Нижнего Новгорода"</div>
-        </div>
-        <div class="mdl-mini-footer__right-section">
-            <div class="mdl-logo about gymnasium">МАОУ<br>"Гимназия №2"</div>
-            <img class="mdl-logo mini-logo" src="img/gymnasium_logo.png" alt="Эмблема Гимназии №2">
-        </div>
-    </footer>
 </div>
 
 </body>
