--- a/stands/architectural.html
+++ b/stands/architectural.html
@@ -60,7 +60,7 @@
         <div class="page-content">
             <br><br><br>
             <div class="content" id="topic_content">
-                <p class="introduction">Нижний Новгород - город с почти тысячелетней историей, в том числе архитектуры.</p>
+                <p class="introduction">Нижний Новгород - город с почти тысячелетней историей, в том числе историей архитектуры.</p>
                 <div id="table_of_contents"></div>
                 <div class="chapter" id="kremlin" data-chapter="Нижегородский кремль">
                     <p>Нижегородский кремль - крепость в историческом центре Нижнего Новгорода и его древнейшая часть, самая узнаваемая достопримечательность Нижнего Новгорода. Он расположен правом высоком берегу, в месте слияния рек Волги и Оки.</p>
