Дополнения к промышленности (ПФ)

--- a/stands/industrial.html
+++ b/stands/industrial.html
@@ -66,8 +66,8 @@
                     <p>Машиностроение и металлообработка являются крупнейшими отраслями промышленности области. Машиностроение составляет 45% промышленного производства Нижегородской области. Согласно экспертной оценке, промышленность региона специализирована на транспортном машиностроении: автостроении, судостроении и самолетостроении.</p>
                     <p>В этой отрасли в Нижегородской области представлены такие крупные компании как "Группа ГАЗ", "Ростехнологии", "Росатом".</p>
                     <img data-label="Горьковский автомобильный завод"/>
-                    <p>Нижегородский машиностроительный завод основан в 1932 году под названием "Новое Сормово". В 1934 году на заводе было организовано конструкторское бюро во главе с конструктором артиллерийских систем Василием Гавриловичем Грабиным. В годы Великой Отечественной Войны заводом было выпущено более 100 тысяч пушек.</p>
-                    <p>В 1994 году прошла приватизация, в ходе которой предприятие было преобразовано в открытое акционерное общество.</p>
+                    <p>Нижегородский машиностроительный завод основан в 1932 году под названием "Новое Сормово". В 1934 году на заводе было организовано конструкторское бюро во главе с конструктором артиллерийских систем Василием Гавриловичем Грабиным. В период Великой Отечественной, войны завод стал одним из крупнейших артиллерийских производств страны по массовому выпуску дивизионных и танковых пушек среднего калибра, выпустя более их более 100 тысяч. После окончания войны в рамках расширения ассортимента изделий предприятие приступило к выпуску продукции гражданского назначения. Было освоено производство нефтяного, атомного, энергетического оборудования, широкого ассортимента насосов, запорной арматуры, теплотехники.</p>
+                    <p>В 1994 году прошла приватизация, в ходе которой предприятие было преобразовано в открытое акционерное общество. Завод вошел в Союз производителей нефтегазового оборудования.</p>
                     <img data-label="Нижегородский машиностроительный завод"/>
                 </div>
                 <div class="chapter" id="aircraft" data-chapter="Авиастроение">
@@ -82,7 +82,9 @@
                     <img data-label="Корабль завода &quot;Красное Сормово&quot;"/>
                 </div>
                 <div class="chapter" id="other" data-chapter="Другая промышленность">
-                    <p><b>Лёгкая и пищевая промышленность</b> представлены чулочно-трикотажными, кожевенно-обувными, швейными предприятиями, мясокомбинатом, колбасным заводом, молочным комбинатом, пивзаводом (пиво "Окское"), кондитерской фабрикой и др. Работает ряд предприятий деревообрабатывающей и полиграфической отраслей.</p>
+                    <p><b>Лёгкая и пищевая промышленность</b> представлены чулочно-трикотажными, кожевенно-обувными, швейными предприятиями, мясокомбинатом, колбасным заводом, молочным комбинатом, пивзаводом (пиво "Окское"), и другими предприятиями, такими как Сормовская кондитерская фабрика. Она была образована в 1937 году. С 2003 года входит в Холдинг "Объединённые кондитеры". На сегодняшний день является ведущим кондитерским предприятием города и области, и занимает устойчивые позиции на региональном рынке.</p>
+                    <img data-label="Сормовская кондитерская фабрика"/>
+                    <p>Работает ряд предприятий деревообрабатывающей и полиграфической отраслей.</p>
                     <p><b>Химическая промышленность</b> Нижегородской области сосредоточена в Нижнем Новгороде и Дзержинске. Она включает в себя продукты органического синтеза, пластмассы и синтетические смолы, оргстекло, лаки, краски и ядохимикаты. Нижегородское предприятие <i>"Оргсинтез"</i> - одно из крупнейших предприятий лесохимической промышленности в России. В городе работает завод <i>"НИЖФАРМ"</i> - один из крупнейших производителей лекарств в России.</p>
                     <p><b>Нефтепереработка</b> представлена такими предприятиями как <i>Лукойл</i>, <i>Русвинил</i> и <i>СИБУР</i></p>
                     <img data-label="Офис &quot;НИЖФАРМ&quot;"/>
