--- a/stands/architectural.html
+++ b/stands/architectural.html
@@ -10,6 +10,7 @@
     <script>var topicName='Архитектурный Нижний';var topicCategory='stand';var topicId='architectural'</script>
     <script src="../js/common.js"></script>
     <script src="../js/topic.js"></script>
+    <script async src="../js/resolver.js"></script>
     <link rel="stylesheet" href="../css/topic.min.css">
     <title>Архитектурный Нижний - Исторический зал</title>
 </head>
@@ -75,39 +76,57 @@
                     <!--<div data-label="Видеоверсия: Нижегородский Кремль" class="injection">
                         <iframe width="560" height="315" src="" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>-->
-                    <div class="injection">
-                        <iframe src="https://yandex.ru/map-widget/v1/-/CGt~IEnv"></iframe>
-                    </div>
+                    <p><div class="injection">
+                        <iframe data-from="https://yandex.ru/map-widget/v1/-/CGt~IEnv"></iframe>
+                    </div></p>
                     <p>Сегодня это официальная резиденция полномочного представителя Президента России в Приволжском федеральном округе, губернатора Нижегородской области и мэра Нижнего Новгорода.</p>
                 </div>
                 <div class="chapter" id="chkalov_stairs" data-chapter="Чкаловская лестница">
                     <p>Чкаловская лестница - не менее узнаваемая нижегородская достопримечательность. Это монументальная лестница в историческом центре Нижнего Новгорода, соединяющая Верхне-Волжскую и Нижне-Волжскую набережные. Она была построена после Великой Отечественной войны и является самой длинной лестницей в России.</p>
                     <img/>
                     <img/>
+                    <div class="injection">
+                        <iframe data-from="https://yandex.ru/map-widget/v1/-/CGt~MZmp"></iframe>
+                    </div>
                     <p>Сегодня на Чкаловской лестнице устраивают спортивные соревнования, чаще всего в виде забегов. Последняя реставрация лестницы проводилась в 2012—2013 годах.</p>
                 </div>
                 <div class="chapter" id="bolshaya_pokrovskaya" data-chapter="Большая Покровская улица">
                     <p>Большая Покровская - главная улица Нижнего Новгорода, расположенная в историческом центре города и связывающая 4 площади: Минина и Пожарского, Театральную, Горького и Лядова. Это одна из самых старинных улиц города, а до 1917 года считалась дворянской.</p>
                     <img/>
+                    <div class="injection">
+                        <iframe data-from="https://yandex.ru/map-widget/v1/-/CGt~MC9o"></iframe>
+                    </div>
                 </div>
                 <div class="chapter" id="drama_theatre" data-chapter="Нижегородский театр драмы">
                     <p>Нижегородский театр драмы - один из старейших русских театров. История создания театра восходит к 1798 году, когда князь Н. Г. Шаховской открыл в Нижнем Новгороде публичный театр.</p>
                     <img/>
+                    <div class="injection">
+                        <iframe data-from="https://yandex.ru/map-widget/v1/-/CGt~MK~N"></iframe>
+                    </div>
                 </div>
                 <div class="chapter" id="art_musem" data-chapter="Нижегородский государственный художественный музей">
                     <p>Нижегородский государственный художественный музей (НГХМ) — один из старейших музеев России и крупнейший музей изобразительного искусства в Нижегородской области. Музей был открыт в 1896 году, став одним из первых общедоступных музеев в русской провинции. Сегодня это памятник федерального значения.</p>
                     <img/>
+                    <div class="injection">
+                        <iframe data-from="https://yandex.ru/map-widget/v1/-/CGt~MSiV"></iframe>
+                    </div>
                 </div>
                 <div class="chapter" id="fair" data-chapter="Нижегородская ярмарка">
                     <p>Нижегородская ярмарка — исторический район, где располагалась крупнейшая ярмарка Российской империи и располагается главная нижегородская выставка.</p>
                     <img/>
                     <img data-label="Фотограция XIX века"/>
+                    <div class="injection">
+                        <iframe data-from="https://yandex.ru/map-widget/v1/-/CGt~M0k5"></iframe>
+                    </div>
                 </div>
                 <div class="chapter" id="monastery" data-chapter="Вознесенский Печерский мужской монастырь">
                     <p>Вознесенский Печерский мужской монастырь основан в начале XIV столетия монахом Киево-Печерского монастыря Дионисием, ставшим впоследствии Суздальско-Нижегородским архипастырем, крупнейшим историческим деятелем своего времени. Расположен монастырь примерно в 3 километрах от Нижегородского кремля, ниже по течению Волги. Многие годы он был крупнейшим духовно-культурным центром Поволжья и одним из самых значимых в России.</p>
                     <img data-label="Вознесенский Печерский мужской монастырь"/>
                     <p> В стенах Вознесенского Печерского монастыря была создана Лаврентьевская летопись — древнейшая датированная русская летопись, которая дошла до наших дней. В составе Лаврентьевской летописи до нас дошел самый древний из сохранившихся список "Повести временных лет".</p>
                     <p>Монастырь был закрыт в 1924 году. На его территории появились жилые корпуса, кинотеатр, архитектурно-реставрационная мастерская. В 1994 году была возобновлена обитель, начались реставрационные работы.</p>
+                    <div class="injection">
+                        <iframe data-from="https://yandex.ru/map-widget/v1/-/CGt~M80s"></iframe>
+                    </div>
                 </div>
                 <br>
             </div>
