Неправильное отображение стрелки спойлера

--- a/stands/architectural.html
+++ b/stands/architectural.html
@@ -77,7 +77,7 @@
                         <iframe width="560" height="315" src="" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>-->
                     <div class="spoiler piece" data-for="kremlin_map">
-                        <div class="spoiler-header spoiler-header-inactive" style="">Нижегородский Кремль на карте</div>
+                        <div class="spoiler-header spoiler-header-inactive" data-name="Нижегородский Кремль на карте"></div>
                         <div class="injection" id="kremlin_map">
                             <iframe class="iframe-injection" data-from="https://yandex.ru/map-widget/v1/-/CGt~IEnv"></iframe>
                         </div>
@@ -89,7 +89,7 @@
                     <img/>
                     <img/>
                     <div class="spoiler piece" data-for="chkalov_stairs_map">
-                        <div class="spoiler-header spoiler-header-inactive" style="">Чкаловская лестница на карте</div>
+                        <div class="spoiler-header spoiler-header-inactive" data-name="Чкаловская лестница на карте"></div>
                         <div class="injection" id="chkalov_stairs_map">
                             <iframe class="iframe-injection" data-from="https://yandex.ru/map-widget/v1/-/CGt~MZmp"></iframe>
                         </div>
@@ -100,7 +100,7 @@
                     <p>Большая Покровская - главная улица Нижнего Новгорода, расположенная в историческом центре города и связывающая 4 площади: Минина и Пожарского, Театральную, Горького и Лядова. Это одна из самых старинных улиц города, а до 1917 года считалась дворянской.</p>
                     <img/>
                     <div class="spoiler piece" data-for="bolshaya_pokrovskaya_map">
-                        <div class="spoiler-header spoiler-header-inactive" style="">Большая Покровская улица на карте</div>
+                        <div class="spoiler-header spoiler-header-inactive" data-name="Большая Покровская улица на карте"></div>
                         <div class="injection" id="bolshaya_pokrovskaya_map">
                             <iframe class="iframe-injection" data-from="https://yandex.ru/map-widget/v1/-/CGt~MC9o"></iframe>
                         </div>
@@ -110,7 +110,7 @@
                     <p>Нижегородский театр драмы - один из старейших русских театров. История создания театра восходит к 1798 году, когда князь Н. Г. Шаховской открыл в Нижнем Новгороде публичный театр.</p>
                     <img/>
                     <div class="spoiler piece" data-for="drama_theatre_map">
-                        <div class="spoiler-header spoiler-header-inactive" style="">Нижегородский театр драмы на карте</div>
+                        <div class="spoiler-header spoiler-header-inactive" data-name="Нижегородский театр драмы на карте"></div>
                         <div class="injection" id="drama_theatre_map">
                             <iframe class="iframe-injection" data-from="https://yandex.ru/map-widget/v1/-/CGt~MK~N"></iframe>
                         </div>
@@ -120,7 +120,7 @@
                     <p>Нижегородский государственный художественный музей (НГХМ) — один из старейших музеев России и крупнейший музей изобразительного искусства в Нижегородской области. Музей был открыт в 1896 году, став одним из первых общедоступных музеев в русской провинции. Сегодня это памятник федерального значения.</p>
                     <img/>
                     <div class="spoiler piece" data-for="art_musem_map">
-                        <div class="spoiler-header spoiler-header-inactive" style="">Нижегородский государственный художественный музей на карте</div>
+                        <div class="spoiler-header spoiler-header-inactive" data-name="Нижегородский государственный художественный музей на карте"></div>
                         <div class="injection" id="art_musem_map">
                             <iframe class="iframe-injection" data-from="https://yandex.ru/map-widget/v1/-/CGt~MSiV"></iframe>
                         </div>
@@ -131,7 +131,7 @@
                     <img/>
                     <img data-label="Фотограция XIX века"/>
                     <div class="spoiler piece" data-for="fair_map">
-                        <div class="spoiler-header spoiler-header-inactive" style="">Нижегородская ярмарка на карте</div>
+                        <div class="spoiler-header spoiler-header-inactive" data-name="Нижегородская ярмарка на карте"></div>
                         <div class="injection" id="fair_map">
                             <iframe class="iframe-injection" data-from="https://yandex.ru/map-widget/v1/-/CGt~M0k5"></iframe>
                         </div>
@@ -143,7 +143,7 @@
                     <p> В стенах Вознесенского Печерского монастыря была создана Лаврентьевская летопись — древнейшая датированная русская летопись, которая дошла до наших дней. В составе Лаврентьевской летописи до нас дошел самый древний из сохранившихся список "Повести временных лет".</p>
                     <p>Монастырь был закрыт в 1924 году. На его территории появились жилые корпуса, кинотеатр, архитектурно-реставрационная мастерская. В 1994 году была возобновлена обитель, начались реставрационные работы.</p>
                     <div class="spoiler piece" data-for="monastery_map">
-                        <div class="spoiler-header spoiler-header-inactive" style="">Вознесенский Печерский мужской монастырь на карте</div>
+                        <div class="spoiler-header spoiler-header-inactive" data-name="Вознесенский Печерский мужской монастырь на карте"></div>
                         <div class="injection" id="monastery_map">
                             <iframe class="iframe-injection" data-from="https://yandex.ru/map-widget/v1/-/CGt~M80s"></iframe>
                         </div>
